--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,40 @@ header {
   width: 319.83px;
   height: 464.662px;
 }
+
+/* Party details section */
+.party-details {
+  margin: 0px auto 120px auto;
+  max-width: 1320px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(255, 0, 0, 0.1) 0%,
+    rgba(255, 0, 0, 0) 100%
+  );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 16px;
+}
+
+.detail-info {
+  color: #070211;
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 56px;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 48px;
+}
+
+.detail-title {
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 56px;
+  margin-bottom: 110px;
+}
