--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,6 @@ header {
   font-weight: 400;
   line-height: 30px;
   margin-bottom: 32px;
-  /* max-width: 679px; */
   margin-right: 40px;
 }
 
@@ -405,6 +404,19 @@ header {
   margin-bottom: 48px;
 }
 
+input {
+  color: rgba(7, 2, 17);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 30px;
+}
+
+input:focus {
+  outline: 1px solid rgba(255, 0, 0, 0.5);
+}
+
 .input-area {
   position: relative;
 }
@@ -422,7 +434,6 @@ header {
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
-  padding-left: 30px;
 }
 
 .subscribe-btn {
